--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="main-body-content">
-              <img src="imgs/mary_okart_2.JPG" alt="Mary O'Kart posing" />
+              <img src="imgs/mary_okart_2.jpg" alt="Mary O'Kart posing" />
             </div>
 
             
